--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,7 +18,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-scroll": "^1.9.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.3",
@@ -52,15 +51,13 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
-    "babel-loader": "^9.1.3",
-    "browserify-zlib": "^0.2.0",
-    "crypto-browserify": "^3.12.0",
+    "css-loader": "^6.10.0",
+    "file-loader": "^6.2.0",
     "nodemon": "^3.0.3",
     "querystring-es3": "^0.2.1",
     "stream-browserify": "^3.0.0",
-    "webpack-cli": "^5.1.4"
+    "style-loader": "^3.3.4",
+    "url-loader": "^4.1.1"
+
   }
 }
