--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.3",
@@ -26,7 +26,6 @@
   },
   "scripts": {
     "dev": "nodemon router.js",
-    "startnode": "node router.js",
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -56,8 +55,9 @@
     "nodemon": "^3.0.3",
     "querystring-es3": "^0.2.1",
     "stream-browserify": "^3.0.0",
-    "style-loader": "^3.3.4",
-    "url-loader": "^4.1.1"
-
+    "style-loader": "^1.2.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4"
   }
 }
