--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
     "nodemon": "^3.0.3",
