--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build": "webpack -c webpack.config.js"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
