--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,13 @@
-node_modules
+# Node.js
+node_modules/
+
+# Environment variables
+.env
+
+# Log files
+logs/
+*.log
+
+# Dependency directories
+/dist/
+/build/
